--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
@@ -24,6 +25,7 @@
     "eslint-config-next": "13.4.4",
     "lucide-react": "^0.241.0",
     "next": "13.4.4",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
     "react": "18.2.0",
