--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "eslint": "8.42.0",
