--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/bcrypt": "^5.0.0",
     "prisma": "^5.2.0"
   }
 }
